safari fix on overflow

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -35,9 +35,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+html, body {
+    overflow-x:hidden
+}
 
 body {
     font-family: $font-main;
     overflow-x: hidden;
+    position: relative;
     background-color: #F7FAFC !important;
 }
